Stopgap solution to iterations overflow

--- a/app/css/components/iterations-footer.css
+++ b/app/css/components/iterations-footer.css
@@ -1,5 +1,6 @@
 .c-iterations-footer {
     @apply flex items-center px-24 py-16;
+    @apply overflow-x-auto;
     z-index: 1;
 
     background: linear-gradient(
